registry/01-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: registry
  labels:
    name: registry
