registry/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: registry
  labels:
    name: registry
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
