registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: registry-service
  name: registry-service
  namespace: registry
spec:
  type: ClusterIP
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
    name: web
  selector:
    app: registry
