registry/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: registry
  namespace: registry
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "registry.ucdialplans.com"
  rules:
  - backendRefs:
    - name: registry-service
      namespace: registry
      kind: Service
      port: 5000
