registry/ingress.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: registry
  namespace: registry
  annotations:
    external-dns.alpha.kubernetes.io/target: k3s.ucdialplans.com
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints: 
  - websecure
  routes:
  - match: Host(`registry.ucdialplans.com`) 
    kind: Rule
    services:
    - name: registry-service
      port: 5000
  tls:
    secretName: traefik-wildcard-cert
